--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.7",
+    "express": "^4.21.0",
+    "fast-xml-parser": "^4.5.0",
     "pinia": "^2.2.2",
     "vite-plugin-vue3-bem": "^1.0.12",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5",
-    "vue3-bem": "^1.0.8"
+    "vue3-bem": "^1.0.8",
+    "vuetify": "^3.7.2"
   },
   "devDependencies": {
     "@feature-sliced/eslint-config": "^0.1.1",
@@ -30,8 +34,8 @@
     "eslint-plugin-vue": "^9.28.0",
     "node-sass": "^9.0.0",
     "prettier": "^3.3.3",
-    "sass": "^1.79.1",
-    "sass-loader": "^16.0.1",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
